--- a/Main-Stuff/EKS/Todo-project/backend.yaml
+++ b/Main-Stuff/EKS/Todo-project/backend.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: todo-backend-deployment
+  namespace: my-app
 spec:
   replicas: 1
   selector:
@@ -23,6 +24,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: todo-backend-service
+  namespace: my-app
 spec:
   type: ClusterIP
   selector:
