--- a/Main-Stuff/EKS/Todo-project/ingress-resource.yaml
+++ b/Main-Stuff/EKS/Todo-project/ingress-resource.yaml
@@ -2,16 +2,13 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: todo-ingress
+  namespace: my-app
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
-    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:eu-north-1:905418150041:certificate/e3fd257e-c8b4-45fe-8a3c-c2a197ed546c" # Your ACM ARN here
-    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
-    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
+    kubernetes.io/ingress.class: "nginx" 
+
 spec:
-  tls:
-  - hosts:
-      - princewill.com.ng
-    secretName: todo-ingress-tls # Can still be used to store certs if needed for internal purposes, but ACM handles SSL
+  ingressClassName: nginx
   rules:
   - host: princewill.com.ng
     http:
@@ -20,7 +17,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: todo-backend-service
+            name: todo-frontend-service
             port:
               number: 80
       - path: /todo-backend
